--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,12 @@ before_install:
   - pip install -r requirements.txt
 #install:
 #  - pip install ".[test]" . # install package + test dependencies
-script:  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics       # stop the build if there are Python syntax errors or undefined names
-script:  flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics  # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-script: pytest # run tests
+#script:  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics       # stop the build if there are Python syntax errors or undefined names
+jobs:
+  include:
+    - stage: lint
+      script:  flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics  # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    - stage: test
+      script: pytest # run tests
 after_success:
   - codecov # submit coverage
