--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-  - 3.6
-  - 3.7
+ # - 3.6
+ # - 3.7
   - 3.8
 before_install:
   - python --version
@@ -15,7 +15,7 @@ before_install:
 #script:  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics       # stop the build if there are Python syntax errors or undefined names
 
 script: flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics  # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        pytest # run tests
-        
+#        pytest # run tests
+
 after_success:
   - codecov # submit coverage
