--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - pip install codecov
   - pip install flake8
   - pip install -r requirements.txt
+  - wget https://nextcloud.peterbeaucage.com/index.php/s/BeAaccExHgLPjWw
+  - unzip Example.zip
 #install:
 #  - pip install ".[test]" . # install package + test dependencies
 #script:  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics       # stop the build if there are Python syntax errors or undefined names
