--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - pip install flake8
   - pip install -r requirements.txt
   - wget https://nextcloud.peterbeaucage.com/index.php/s/BeAaccExHgLPjWw/download
+  - mv download Example.zip
   - unzip Example.zip
 #install:
 #  - pip install ".[test]" . # install package + test dependencies
