Update example data storage location (& add a SST1 scan to pack contents)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ before_install:
   - pip install codecov
   - pip install flake8
   - pip install -r requirements.txt
-  - wget https://nextcloud.peterbeaucage.com/index.php/s/BeAaccExHgLPjWw/download
-  - mv download Example.zip
+  - wget https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/Example.zip
   - unzip Example.zip
 #install:
 #  - pip install ".[test]" . # install package + test dependencies
