--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
-*__pycache__
-*.ipynb_checkpoints
-Example/*
-example-data/*
-example_data/*
+example_data/CCD
+example_data/SST1
 *.hdf
 *.DS_Store
 *.fits
 *.zip
 peter-dafs/*
 SST1RSoXS_Dec20/*
+GuoRSoXS*
+venv/*
+.idea*
+OrientationRunDec2019/*
+*.p
+*.ipynb
+Example/*
+example-data/*
