--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,5 @@ src/__pycache__
 src/PyHyperScattering/__pycache__
 src/PyHyperScattering/.ipynb_checkpoints/*
 dist
-docs/_build/*
-docs/_build/html/*
+docs/_build
 
