--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,26 @@
 example_data/CCD
 example_data/SST1
-*.hdf
-*.DS_Store
-*.fits
-*.zip
-peter-dafs/*
-SST1RSoXS_Dec20/*
+**/*.hdf
+**/*.DS_Store
+**/*.fits
+**/*.zip
+peter-dafs/**
+SST1RSoXS_Dec20/**
 GuoRSoXS*
 venv/*
 .idea*
-OrientationRunDec2019/*
-*.p
-*.ipynb
-Example/*
-example-data/*
-src/.*
-src/.ipynb_checkpoints/*
+OrientationRunDec2019/**
+**/*.p
+**/.*
+**/*.ipynb
+Example/**
+example-data/**
 src/__pycache__
 *.egg-info
 src/PyHyperScattering/__pycache__
 src/PyHyperScattering/.ipynb_checkpoints/*
 dist
-docs/_build
-
+docs/_build/
+docs/_build/html/**
+docs/_build/doctrees/**
+**/.ipynb_checkpoints/**
