--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,11 @@ install_requires =
     xarray
 [options.packages.find]
 where = src
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/PyHyperScattering/_version.py
+versionfile_build = PyHyperScattering/_version.py
+tag_prefix = 
+parentdir_prefix = pyhyperscattering-
