Add versioneer to build environment.

--- a/.github/workflows/python-test-publish-all.yml
+++ b/.github/workflows/python-test-publish-all.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Upload Package To TestPyPi
 
 on:
   workflow_run:
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install build versioneer
     - name: Build package
       run: python -m build
     - name: Publish package
