--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,8 +17,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps:    
+    - name: Fetch repo  
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
