--- a/.github/workflows/python-test-publish-all.yml
+++ b/.github/workflows/python-test-publish-all.yml
@@ -20,7 +20,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Fetch repo  
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -29,6 +32,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build versioneer
+    - name: Monkeypatch version string
+      run: 
+        sed -i 's/style = pep440/style = pep440-pre/g' setup.cfg
     - name: Build package
       run: python -m build
     - name: Publish package
