--- a/.github/workflows/python-test-publish-all.yml
+++ b/.github/workflows/python-test-publish-all.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - name: Fetch repo  
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
     - name: Set up Python
