--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
       run: |
         wget https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/Example.zip
         unzip Example.zip
+        wget https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/cyrsoxs-example.zip
+        unzip cyrsoxs-example.zip
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
