--- a/.github/workflows/python-test-publish-all.yml
+++ b/.github/workflows/python-test-publish-all.yml
@@ -11,6 +11,7 @@ name: Upload Package To TestPyPi
 on:
   workflow_run:
     workflows: ["PyHyperScattering"]
+    branches: [main]
     types:
       - completed
 
