Update ci workflows to include coverage, only push on successful tests.

--- a/.github/workflows/python-test-publish-all.yml
+++ b/.github/workflows/python-test-publish-all.yml
@@ -19,7 +19,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - name: Fetch repo  
       uses: actions/checkout@v2
