--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,10 +50,10 @@ jobs:
       run: |
         coverage report
         coverage html
-    - name: Upload pytest test results
+    - name: Upload coverage report
       uses: actions/upload-artifact@v2
       with:
-        name: pytest-results-${{ matrix.python-version }}
-        path: junit/test-results-${{ matrix.python-version }}.xml
+        name: coverage-${{ matrix.python-version }}
+        path: htmlcov/index.html
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
