Metadata label change
Changed lines 190 and 192 to keyword RSoXS Shutter Opening Time (ms) to account for change in metadata labelling

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,23 @@ dist
 docs/_build/*
 docs/_build/html/*
 *.pyc
+example_data/11012/Dark_56367-AI.txt
+example_data/11012/Dark_56368-AI.txt
+example_data/11012/Dark_56369-AI.txt
+example_data/11012/L1PB_C_100_56370-AI.txt
+example_data/11012/L1PB_C_190_56371-AI.txt
+example_data/11012/L1PB_C_190_56372-AI.txt
+example_data/11012/L1PB_C_190_56373-AI.txt
+example_data/11012/Load1_PS300_hqc_56364-AI.txt
+example_data/11012/Load1_PS300_hqc_56365-AI.txt
+example_data/11012/Load1_PS300_hqe_56366-AI.txt
+example_data/11012/Load1_PS300_lq_56363-AI.txt
+example_data/11012/Mask_HQCPS300.tif
+example_data/11012/Mask_HQEPS300.tif
+example_data/11012/Mask_LowQPS300.tif
+example_data/11012/PB4B_Oedge_ThetaScan56374-AI.txt
+example_data/11012/PBL1_3A_WRSoXS_56377-AI.txt
+example_data/11012/PBL1_3A_WRSoXS_56378-AI.txt
+example_data/11012/PBL1_Naedge_56379-AI.txt
+example_data/11012/PBL1_Oedge_56375-AI.txt
+example_data/11012/PBL1_Oedge_56376-AI.txt
