--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest coverage
+        pip install pybind11 wheel
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
