Beam Center May 2022
Added updated beam center from May 2022 run to read_json. Sample-detector distance is a wild guess at this point; beam-center should probably still be finely tuned

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ example_data/11012/PBL1_3A_WRSoXS_56378-AI.txt
 example_data/11012/PBL1_Naedge_56379-AI.txt
 example_data/11012/PBL1_Oedge_56375-AI.txt
 example_data/11012/PBL1_Oedge_56376-AI.txt
+tutorial/DrawMask tutorial.ipynb
+tutorial/SST1 data tutorial.ipynb
