--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     scikit-image
     scipy
     pillow 
-    xarray != 2022.6.0
+    xarray != 2022.6.0,!=2022.9.0
     tqdm
 [options.packages.find]
 where = src
