--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         pip install flake8 pytest coverage
         pip install pybind11 wheel
         pip install -r requirements.txt
+        pip install dask
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
