--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,9 +60,9 @@ jobs:
         unzip mask-test-pack.zip
     - name: Test with pytest
       run: |
-        pytest
+        #pytest -v
         #temporarily disabling coverage for memory usage
-        #coverage run -m pytest
+        coverage run -m pytest -v
     - name: Report coverage
       run: |
         coverage report
