--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         unzip cyrsoxs-example.zip
         wget https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/mask-test-pack.zip
         unzip mask-test-pack.zip
-        wget https://github.com/usnistgov/PyHyperScattering/files/10886303/PSS300nm_C_ccd100.zip
+        wget https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/PSS300nm_C_ccd100.zip
         unzip PSS300nm_C_ccd100.zip
     - name: Fetch and unzip example data (Windows)
       if: ${{ matrix.os == 'windows-latest' }}
@@ -64,6 +64,8 @@ jobs:
         unzip cyrsoxs-example.zip
         C:\msys64\usr\bin\wget.exe https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/mask-test-pack.zip
         unzip mask-test-pack.zip
+        C:\msys64\usr\bin\wget.exe https://github.com/usnistgov/PyHyperScattering/releases/download/0.0.0-example-data/PSS300nm_C_ccd100.zip
+        unzip PSS300nm_C_ccd100.zip
     - name: Test with pytest
       run: |
         #pytest -v
