--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -12,4 +12,4 @@ jobs:
           formats: |-
             epub
             pdf
-          pip-requirements: requirements.txt
+          pip-requirements: 'requirements.txt'
