add note to numexpr pin

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ scipy
 pillow
 xarray
 tqdm
+# the following pin is due to a security update to numexpr: https://github.com/pydata/numexpr/issues/442
+# consider removing once this is resolved
 numexpr<2.8.5
