--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -6,7 +6,7 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: usnistgov/NISTtheDocs2Death@0.4
+      - uses: usnistgov/Docs4NIST@0.5
         with:
           docs-folder: docs/
           formats: |-
