Update minimum xarray version

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ pyfai
 scikit-image
 scipy
 pillow
-xarray
+# the following minimum version is due to new explicit Coordinate code
+xarray>2023.6
 tqdm
 pydata_sphinx_theme
 # the following pin is due to a security update to numexpr: https://github.com/pydata/numexpr/issues/442
