Switch from full SHA to tagged version

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -6,7 +6,7 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: usnistgov/Docs4NIST@982d83efe04ce081f163ca906954312b028eb537
+      - uses: usnistgov/Docs4NIST@0.7
         with:
           docs-folder: docs/
           formats: |-
