--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ bluesky = [
     "tiled[all]>=0.1.0a74",
     "databroker[all]>=2.0.0b10",
     "bluesky-tiled-plugins",
-    "bottleneck"
+    "bottleneck",
+    "dask[distributed]"
 ]
 performance = [
     "pyopencl",
