--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,4 @@ pillow
 xarray
 tqdm
 pydata_sphinx_theme
-# the following pin is due to a security update to numexpr: https://github.com/pydata/numexpr/issues/442
-# consider removing once this is resolved
-numexpr<2.8.5
+numexpr!=2.8.5,!=2.8.6
