Add silx to all as well

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ all = [
     "cupy",
     "holoviews==1.16.2",
     "hvplot",
+    "silx==2.0.0",
     "sphinx",
     "pydata_sphinx_theme",
     "pytest",
