--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,7 @@ bluesky = [
     "tiled[all]>=0.1.0a74",
     "databroker[all]>=2.0.0b10",
     "bluesky-tiled-plugins",
-    "bottleneck",
-    "dask[distributed]"
+    "bottleneck"
 ]
 performance = [
     "pyopencl",
