Add dev extras to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,12 @@ doc = [
         "sphinx",
         "pydata_sphinx_theme"
         ]
+dev = ["flake8",
+       "pytest", 
+       "coverage",
+       "pybind11",
+       "wheel"
+        ]
 test =  [
         "pytest",
          "black",
@@ -83,7 +89,12 @@ all-nogpu = [
     "pytest",
     "black",
     "codecov",
-    "pylint"
+    "pylint",
+    "flake8",
+       "pytest", 
+       "coverage",
+       "pybind11",
+       "wheel"
 ]
 all = [
     "tiled[all]>=0.1.0a74",
@@ -102,7 +113,12 @@ all = [
     "pytest",
     "black",
     "codecov",
-    "pylint"
+    "pylint",
+    "flake8",
+       "pytest", 
+       "coverage",
+       "pybind11",
+       "wheel"
 ]
 
 [project.urls]
