--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: PyHyperScattering CI Testing
 
-on: 
-  push:
+on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
@@ -14,7 +13,15 @@ jobs:
       matrix:
         python-version: ['3.10','3.11','3.12','3.13']
         os: [ubuntu-latest, macOS-latest, windows-latest]
-
+        exclude:
+          - os: macOS-latest
+            python-version: '3.11'
+          - os: macOS-latest
+            python-version: '3.12'
+          - os: windows-latest
+            python-version: '3.11'
+          - os: windows-latest
+            python-version: '3.12'
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
