fix again for prerelease

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ grazing = [
     ]
 bluesky = [
     "tiled[all]>=0.1.0a74",
-    "bluesky-tiled-plugins!=2.0.0b60",
+    "bluesky-tiled-plugins>=2.0.0b54,!=2.0.0b60",
     "bottleneck"
 ]
 performance = [
@@ -75,7 +75,7 @@ test =  [
          ]
 all-nogpu = [
     "tiled[all]>=0.1.0a74",
-    "bluesky-tiled-plugins!=2.0.0b60",
+    "bluesky-tiled-plugins>=2.0.0b54,!=2.0.0b60",
     "bottleneck",
     "pyopencl",
     "dask",
@@ -95,8 +95,7 @@ all-nogpu = [
 ]
 all = [
     "tiled[all]>=0.1.0a74",
-    "databroker[all]>=2.0.0b10",
-    "bluesky-tiled-plugins",
+    "bluesky-tiled-plugins>=2.0.0b54,!=2.0.0b60",
     "bottleneck",
     "pygix",
     "pyopencl",
